--- a/package.json
+++ b/package.json
@@ -8,17 +8,13 @@
     "node": ">=18.0.0"
   },
   "scripts": {
-    "install": "prebuild-install || (node-gyp rebuild --release -j max && node-gyp clean)",
+    "install": "node-gyp rebuild --release -j max && node-gyp clean",
     "rebuild": "node-gyp rebuild --release -j max",
     "lint": "find src -name '*.cc' | xargs -n1 clang-tidy",
     "test": "node test.js"
   },
   "dependencies": {
-    "prebuild-install": "^7.1.2"
-  },
-  "devDependencies": {
-    "isolated-vm": ".",
-    "prebuild": "^13.0.1"
+    "node-gyp": "^11.0.0"
   },
   "binary": {
     "module_path": "out"
